# lightning_template

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: check_commit_messages.yml  check_pre_commit_hooks.yml  pre_release.yml  publish.yml  python-publish.yml  release.yml  test.yml
docs/: conf.py  index.md
docs/configs/: config_file_structure.md  deep_update.md
docs/configs/argument_parsers/: index.md  json_file.md  yaml_with_merge.md
docs/core/: dataset.md  model.md  optimizer_config.md  trainer.md
docs/get_started/: CHANGELOG.md  changelog.md  contribution.md  installation.md  usage.md
docs/installation/: installation.md
docs/tools/: cli.md  shell_cmd_launcher.md  speed_benchmark.md
lightning_template/: __init__.py
lightning_template/datasets/: base.py
lightning_template/models/: base.py
lightning_template/tools/: __init__.py  cli.py  shell_cmd_launcher.py
lightning_template/utils/: __init__.py
lightning_template/utils/callbacks/: custom_repr.py  model_checkpoint.py  save_and_log_config_callback.py  set_precision_and_cudnn_callback.py  set_rich_traceback_handler.py  set_sharing_strategy_callback.py  set_wandb_logger_callback.py
lightning_template/utils/cli/: __init__.py  cli.py  get_split_config.py  instantiate_class.py  shell_cmd_launcher.py
lightning_template/utils/cli/argument_parsers/: deep_update.py  json_file_action.py  yaml_with_merge.py
lightning_template/utils/loggers/: __init__.py  wandb.py
lightning_template/utils/loop/: __init__.py  kfold.py
lightning_template/utils/mixin/: __init__.py  split_name_mixin.py
lightning_template/utils/optim/: __init__.py  configure_optimizers.py  warmup_lr_scheduler.py
lightning_template/utils/progress/: rich_progress.py
lightning_template/utils/speed_benchmark/: __init__.py  speed_benchmark.py
lightning_template/utils/timer/: __init__.py  timer.py
lightning_template/utils/visualization/: __init__.py  generate_color.py  line_chart.py
models/: base.py
requirements/: runtime.txt
tests/: test_dummpy.py
